--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "aws-cli": "0.0.2",
     "aws-sdk": "^2.678.0",
     "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^5.2.0",
+    "csurf": "^1.11.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
